--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,7 +4,7 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
+    status: completed
     last-updated: '2022-06-14T20:03:54.885Z'
   - name: STRA
     status: STRA_STATUS_HERE
