--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -7,5 +7,5 @@ spec:
     status: completed
     last-updated: '2022-06-14T20:03:54.885Z'
   - name: STRA
-    status: STRA_STATUS_HERE
+    status: completed
     last-updated: '2022-06-14T20:03:54.885Z'
