--- a/cerberus/Dockerfile
+++ b/cerberus/Dockerfile
@@ -1,46 +1,22 @@
-# FROM image-registry.openshift-image-registry.svc:5000/openshift/cli
-# Use this when building off cluster
-FROM registry.redhat.io/openshift4/ose-cli:v4.11
+# Dockerfile for cerberus
 
-LABEL maintainer="Shelly Han <Shelly.Han@gov.bc.ca>" \
-      io.k8s.display-name="Cerberus Monitoring" \
-      io.k8s.description="Cluster monitoring that serves a go/no-go signal for uptime status."
+FROM quay.io/openshift/origin-tests:latest as origintests
 
-# Copy entitlements
-COPY ./etc-pki-entitlement /etc/pki/entitlement
+FROM quay.io/centos/centos:7
 
-# Copy subscription manager configurations
-COPY ./rhsm-conf /etc/rhsm
-COPY ./rhsm-ca /etc/rhsm/ca
+MAINTAINER Red Hat OpenShift Performance and Scale
 
-# Install some packages and clean up
-RUN INSTALL_PKGS="git python39 python3-pip gcc python39-devel libtiff-devel libjpeg-turbo-devel openjpeg2-devel zlib-devel freetype-devel lcms2-devel libwebp-devel tcl-devel tk-devel harfbuzz-devel fribidi-devel libraqm-devel libimagequant-devel libxcb-devel" && \
-    # Initialize /etc/yum.repos.d/redhat.repo
-    # See https://access.redhat.com/solutions/1443553
-    rm /etc/rhsm-host && \
-    yum repolist --disablerepo='*' && \
-    subscription-manager repos --enable "codeready-builder-for-rhel-8-x86_64-rpms" && \
-    yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm && \
-    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
-    # Note: use the actual name of packages in INSTALL_PKGS, otherwise it will failed the verification!
-    rpm -V $INSTALL_PKGS && \
-    yum -y clean all --enablerepo='*' && \
-    # Remove entitlements and Subscription Manager configs
-    rm -rf /etc/pki/entitlement && \
-    rm -rf /etc/rhsm
+ENV KUBECONFIG /root/.kube/config
 
-RUN pip3 install httplib2 multidict typing_extensions
+# Copy OpenShift CLI, Kubernetes CLI from origin-tests image
+COPY --from=origintests /usr/bin/oc /usr/bin/oc
+COPY --from=origintests /usr/bin/kubectl /usr/bin/kubectl
 
-# Reference: https://github.com/chaos-kubox/cerberus/blob/main/containers/Dockerfile
-RUN git clone https://github.com/redhat-chaos/cerberus /root/cerberus
+# Install dependencies
+RUN yum install -y git python39 python3-pip gcc python3-devel zlib-devel libjpeg-devel
 
-RUN ls -al
+RUN git clone https://github.com/redhat-chaos/cerberus.git --branch v1.0.1 /root/cerberus &&
 
-# to get rid of the need for privileged user:
-RUN touch /root/cerberus/cerberus.report && \
-    # mkdir /root/cerberus/history && \
-    chmod -R 775 /root/cerberus/cerberus.report && \
-    chmod -R 775 /root/cerberus/history
 
 # Copy Cerberus custom checks
 COPY custom_checks/custom_checks.py /root/cerberus/custom_checks/custom_checks.py
@@ -52,10 +28,7 @@ COPY entrypoint.sh /usr/local/bin/
 RUN chmod 755 /usr/local/bin/entrypoint.sh \
     && chgrp 0 /usr/local/bin/entrypoint.sh
 
-RUN cd /root/cerberus && \
-    pip3 install -r requirements.txt
-
-USER 1001
+RUN cd /root/cerberus && pip3 install --upgrade pip && pip3 install -r requirements.txt
 
 WORKDIR /root/cerberus
 
