--- a/cerberus/Dockerfile
+++ b/cerberus/Dockerfile
@@ -15,7 +15,7 @@ COPY --from=origintests /usr/bin/kubectl /usr/bin/kubectl
 # Install dependencies
 RUN yum install -y git python39 python3-pip gcc python3-devel zlib-devel libjpeg-devel
 
-RUN git clone https://github.com/redhat-chaos/cerberus.git --branch v1.0.1 /root/cerberus &&
+RUN git clone https://github.com/redhat-chaos/cerberus.git --branch v1.0.1 /root/cerberus
 
 
 # Copy Cerberus custom checks
