added report path

--- a/cerberus/Dockerfile
+++ b/cerberus/Dockerfile
@@ -17,6 +17,11 @@ RUN yum install -y git python39 python3-pip gcc python3-devel zlib-devel libjpeg
 
 RUN git clone https://github.com/redhat-chaos/cerberus.git --branch v1.0.1 /root/cerberus
 
+# to get rid of the need for privileged user:
+RUN touch /root/cerberus/cerberus.report && \
+    # mkdir /root/cerberus/history && \
+    chmod -R 775 /root/cerberus/cerberus.report && \
+    chmod -R 775 /root/cerberus/history
 
 # Copy Cerberus custom checks
 COPY custom_checks/custom_checks.py /root/cerberus/custom_checks/custom_checks.py
