--- a/cerberus/devops/cerberus-bc.yml
+++ b/cerberus/devops/cerberus-bc.yml
@@ -1,18 +1,10 @@
 ---
-apiVersion: image.openshift.io/v1
-kind: ImageStream
-metadata:
-  name: cerberus
-  namespace: openshift-bcgov-cerberus
-  labels:
-    app: cerberus
----
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
   labels:
     app: cerberus
-  name: cerberus
+  name: cerberus-artifactory
   namespace: openshift-bcgov-cerberus
 spec:
   resources:
@@ -24,20 +16,11 @@ spec:
       memory: 128Mi
   output:
     to:
-      kind: ImageStreamTag
-      name: cerberus:latest
+      kind: DockerImage
+      name: 'artifacts.developer.gov.bc.ca/plat-util-images/cerberus:test' #change to prod for production usage
+    pushSecret:
+      name: artifacts-platform-services
   source:
-    secrets:
-    - secret:
-        name: platform-services-controlled-etc-pki-entitlement
-      destinationDir: etc-pki-entitlement
-    configMaps:
-    - configMap:
-        name: platform-services-controlled-rhsm-ca
-      destinationDir: rhsm-ca
-    - configMap:
-        name: platform-services-controlled-rhsm-conf
-      destinationDir: rhsm-conf
     contextDir: cerberus
     git:
       ref: main
