revert bc name change

--- a/cerberus/devops/cerberus-bc.yml
+++ b/cerberus/devops/cerberus-bc.yml
@@ -4,7 +4,7 @@ kind: BuildConfig
 metadata:
   labels:
     app: cerberus
-  name: cerberus-artifactory
+  name: cerberus
   namespace: openshift-bcgov-cerberus
 spec:
   resources:
