--- a/cerberus/devops/cerberus.yml
+++ b/cerberus/devops/cerberus.yml
@@ -1,3 +1,4 @@
+# not used at the moment as we need HA into the cerberus server pods
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -44,9 +45,6 @@ spec:
             - mountPath: "/tmp/cerberus-config-template.yaml"
               subPath: cerberus-config-template.yaml
               name: cerberus-config
-            # - mountPath: "/usr/local/bin/custom_checks/custom_checks.py"
-            #   subPath: custom_checks.py
-            #   name: cerberus-custom-check
             - mountPath: /tmp/data
               name: cerberus-storage
       volumes:
