--- a/cerberus/config/cerberus-config-template.yaml
+++ b/cerberus/config/cerberus-config-template.yaml
@@ -8,8 +8,10 @@ cerberus:
   watch_master_schedulable:                            # When enabled checks for the schedulable master nodes with given label.
       enabled: False
       label: node-role.kubernetes.io/master
+  watch_terminating_namespaces: False                  # Set to True to monitor if any namespaces in the 'watch_namespaces' list start terminating
   watch_namespaces:                                    # List of namespaces to be monitored
-      - openshift-etcd
+    - openshift-bcgov-cerberus
+  watch_namespaces_ignore_pattern: ^$                  # skip all pods as we allow pod restart
   cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
   inspect_components: False                            # Enable it only when OpenShift client is supported to run
                                                        # When enabled, cerberus collects logs, events and metrics of failed components
